--- a/include/css/style.css
+++ b/include/css/style.css
@@ -22,6 +22,9 @@
 
     body, html {
       height: 100%;
+      /* zoom: 100%; */
+     max-width: 1520px;
+     /* min-width: 100%; */
     }
 :root{
     --primary-color:#FF7F00;
@@ -42,6 +45,8 @@ section{
       color: white;
       position: absolute;
       width: 100%;
+     max-width: 1520px;
+
       z-index: 10;
     }
       .header-box{
@@ -309,8 +314,9 @@ font-family: var(--secondary-font-family);
     background-image: url(/images/Frame\ 1000005148.png);
     background-size: cover;
     width: 100%;
-    padding:0px 120px;
-    height: 100vh;
+    padding:120px;
+    /* height: 100vh; */
+    height: fit-content;
     display: flex;
     /* align-items: center; */
     justify-content: center;
@@ -372,7 +378,7 @@ padding: 10px 0px;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 34px;
+    font-size: 33px;
     color: white;
 }
 
@@ -1109,7 +1115,7 @@ padding: 10px 0px;
 
 .fade-in {
   opacity: 0;
-  transform: translateY(70px);
+  transform: translateY(20px);
   transition: all 0.8s ease-out;
 }
 
@@ -1119,7 +1125,7 @@ padding: 10px 0px;
 }
 .slide-up {
   opacity: 0;
-  transform: translateY(100px);
+  transform: translateY(20px);
   transition: all 1s ease;
 }
 .slide-up.show {
