--- a/include/css/style.css
+++ b/include/css/style.css
@@ -179,7 +179,7 @@ padding: 40px 0;
         letter-spacing: 0.5px;
 
     }
-     /* .home-page {
+     .home-page {
       background: url('/images/Frame\ 1000005142\ \(2\).png') no-repeat center center/cover;
   
     }
@@ -197,7 +197,7 @@ padding: 40px 0;
       font-weight: 100;
       color: white;
       line-height: 140px;
-    } */
+    }
 
     .home-page {
       background: url('/images/Frame 1000005142 (2).png') no-repeat center center/cover;
@@ -224,8 +224,8 @@ padding: 40px 0;
       font-size: 132px;
       color: white;
       font-family: var(--primary-font-family);
-      line-height: 110px;
-      /* text-align: center; */
+      line-height: 122px;
+      text-align: center;
       position: absolute;
       opacity: 0;
     }
