--- a/include/css/style.css
+++ b/include/css/style.css
@@ -416,7 +416,7 @@ padding: 10px 0px;
     font-size: 18px;
     font-family: var(--secondary-font-family);
     font-weight: 400;
-    padding: 20px 0;
+    padding-bottom: 20px 0;
     line-height: 28px;
     /* letter-spacing: 1px; */
 }
@@ -555,7 +555,7 @@ padding: 10px 0px;
 
   
 .brand-boxes {
-  padding: 30px 0;
+  padding: 30px 0 70px 0;
 }
 
 .brand-box {
@@ -564,11 +564,14 @@ padding: 10px 0px;
   flex-wrap: wrap;
   align-items: center;
   padding: 20px 40px;
-  border-bottom: 1px solid #eee;
+  border-bottom: 3px solid #C4C4C4;
   transition: background 0.3s ease;
   gap: 30px;
-  border-radius: 4px;
+  /* border-radius: 4px; */
   background-color: #fff;
+}
+.brand-box:last-child {
+  border-bottom: none;
 }
 
 .left-side {
@@ -702,17 +705,26 @@ padding: 10px 0px;
   }
 
   .right-box .right-box-child p{
-    font-size: 14px;
-    font-weight: 700 ;
-    letter-spacing: 0.5px;
+    font-size: 16px;
+    font-weight: 100 ;
+    letter-spacing: 1px;
     /* padding: 5px 0px; */
+    padding: 0px 0px 0px 25px;
   }
+
+
+    /* font-size: 16px;
+    font-weight: 1--;
+    letter-spacing: 1px; */
 
   .right-box .right-box-child{
     padding-top: 20px;
+ 
   }
-
-
+.dusra-box{
+  display: flex;
+  gap: 9px;
+}
   /* Base layout */
 .jobs-listing {
   background-color: #2f2a2f;
@@ -788,10 +800,18 @@ padding: 10px 0px;
 .apply-btn:hover {
   background-color: #e96f00;
 }
-
+.view-buttons{
+  color: var(--primary-color);
+  padding: 0 140px 20px 120px;
+  /* border-bottom: 1px solid #e96f00; */
+  width: fit-content;
+  font-size: 16px;
+  float: right;
+  cursor: pointer;
+}
 
 .join-us{
-    background-color: var(--secondary-color);
+    background-color: #2f2a2f;
 }
 .joinus-img{
     background-image: url('/images/Property\ 1=Default.png');
@@ -813,8 +833,8 @@ padding: 10px 0px;
 .joinus-type{
   color: white;
   font-family: var(--primary-font-family);
-  font-size: 34px;
-  padding: 30px 0 10px 0px;
+  font-size: 30px;
+  padding: 50px 0 20px 0px;
 }
 .joinus-next-box{
     padding: 20px 120px;
@@ -975,13 +995,14 @@ padding: 10px 0px;
 .key-engagements{
   background-color: var(--secondary-color);
   /* padding: 20px; */
+  padding: 40px 120px;
 }
 
     .engagements-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 30px;
-  padding: 80px 0px;
+  padding: 20px 0px 50px 0px;
   /* background: #1f1b2e; */
 }
 
@@ -1145,6 +1166,9 @@ padding: 10px 0px;
     padding: 0px;
 
   }
+  .impact-para{
+    padding: 20px;
+  }
   .joinus-boxes{
     grid-template-columns: repeat(2,1fr);
   }
@@ -1168,7 +1192,16 @@ padding: 10px 0px;
     width: 100%;
     transition: max-height 0.4s ease;
   }
-
+.view-buttons{
+  color: var(--primary-color);
+  padding: 0px 40px 50px 0px;
+  /* margin-bottom: 20px; */
+  /* border-bottom: 1px solid #e96f00; */
+  width: fit-content;
+  font-size: 16px;
+  /* float: right; */
+  cursor: pointer;
+}
   .navbar.show {
     max-height: 400px;
   }
