--- a/include/css/style.css
+++ b/include/css/style.css
@@ -802,12 +802,17 @@ padding: 10px 0px;
 }
 .view-buttons{
   color: var(--primary-color);
-  padding: 0 140px 20px 120px;
+  /* padding: 0 140px 20px 120px; */
   /* border-bottom: 1px solid #e96f00; */
-  width: fit-content;
+  /* width: fit-content; */
   font-size: 16px;
-  float: right;
+  /* float: right; */
   cursor: pointer;
+  width: 100%;
+  display: flex;
+  align-items: end;
+  justify-content: flex-end;
+  padding: 10px  ;
 }
 
 .join-us{
@@ -1192,16 +1197,7 @@ padding: 10px 0px;
     width: 100%;
     transition: max-height 0.4s ease;
   }
-.view-buttons{
-  color: var(--primary-color);
-  padding: 0px 40px 50px 0px;
-  /* margin-bottom: 20px; */
-  /* border-bottom: 1px solid #e96f00; */
-  width: fit-content;
-  font-size: 16px;
-  /* float: right; */
-  cursor: pointer;
-}
+
   .navbar.show {
     max-height: 400px;
   }
