--- a/include/css/style.css
+++ b/include/css/style.css
@@ -39,6 +39,37 @@ section{
   padding: 0px 120px;
 }
 
+/* Loader full screen */
+#loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: white; /* Ya tum apna background color rakh sakte ho */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+/* Spinner animation */
+.spinner {
+  width: 50px;
+  height: 50px;
+  border: 5px solid #f3f3f3;
+  border-top: 5px solid orange; /* Tumhara theme color */
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+/* Spin animation */
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
     header {
        background-color: #2F2A33;
       padding: 20px 120px;
@@ -1381,4 +1412,11 @@ font-size: 20px;
     font-size: 16px;
     padding: 20px 0px;
   }
+  .joinus-last .joinus-last-content{
+    width: fit-content;
+    font-size: 18px;
+    color: white;
+    padding-bottom: 20px;
+    border-bottom: 2px solid white;
+}
 }
