--- a/include/css/style.css
+++ b/include/css/style.css
@@ -1192,6 +1192,9 @@ padding: 10px 0px;
   transform: translateY(0);
 } */
 
+.leads-wala{
+  padding:13px 10px ;font-weight: 100; font-style: italic; text-align: center;display: flex; align-items: center;justify-content: center;font-size: 36px; line-height: 65px;
+}
 
 /* ===== Common Mobile Devices (≤ 768px) ===== */
 @media screen and (max-width: 1235px) {
@@ -1374,7 +1377,10 @@ padding: 10px 0px;
     border-bottom: 3px solid gray;
   }
 
-  
+  .leads-wala{
+  padding:13px 10px ;font-weight: 100; font-style: italic; text-align: center;display: flex; align-items: center;justify-content: center;font-size: 20px; line-height: 45px;
+}
+
   .impactsection-icons-db {
     grid-template-columns: repeat(1, 1fr);
     gap: 20px;
@@ -1419,4 +1425,19 @@ font-size: 20px;
     padding-bottom: 20px;
     border-bottom: 2px solid white;
 }
+
+
+
+  .header-banner h1 {
+    font-size: 30px;
+    width: fit-content;
+    border-bottom: 3px solid var(--secondary-color);
+    font-family: var(--primary-font-family);
+  }
+
+  .header-banner h4 {
+    color: var(--secondary-color);
+    font-size: 18px;
+    text-align: center;
+  }
 }
